<resources>
    <string name="app_name">AirlinePedia</string>
    <string name="app_description">AirlinePedia adalah ensiklopedia seputar maskapai udara di dunia meliputi informasi deskripsi, sejarah,logo serta makna nya, armada, dan info lainnya</string>
    <string name="airline_name">Nama Maskapai</string>
    <string name="description">Deskripsi</string>
    <string name="history">Sejarah</string>
    <string name="logo">Logo</string>
    <string name="aircraft">Armada</string>
    <string name="account_name">Muhammad Shidiqiyyah Ihsan</string>
    <string name="email_account">shidiqiihsan@gmail.com</string>
    <string name="details">Rincian</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="gallery">Galeri</string>
    <string name="sort">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="from">from</string>
    <string name="settings">Settings</string>
    <string name="back_button_description">Kembali</string>
    <string-array name="data_name">
        <item>AirAsia</item>
        <item>AirFrance</item>
        <item>All Nippon Airways (ANA)</item>
        <item>Batik Air</item>
        <item>British Airways</item>
        <item>Emirates Airlines</item>
        <item>Etihad Airways</item>
        <item>Garuda Indonesia</item>
        <item>Korean Air</item>
        <item>Lion Air</item>
        <item>Lufthansa</item>
        <item>Singapore Airlines</item>
        <item>Turkish Airlines</item>
        <item>Qantas</item>
        <item>Qatar Airways</item>









    </string-array>
    <string-array name="data_description">
        <item>AirAsia (tulisan airasia), adalah sebuah maskapai penerbangan bertarif rendah (low-cost carrier) multinasional yang berpusat di Bandara Internasional Kuala Lumpur, Malaysia. AirAsia sendiri adalah maskapai swasta terbesar di Malaysia. Dengan jaringan rute di Indonesia, Arab Saudi, Jepang, Malaysia, Thailand, Singapura, dan Vietnam serta rute carter menuju Tiongkok dan Hong Kong, AirAsia menjadikan dirinya sebagai pemain Regional yang akan berkompetisi dengan Lion Air dari Indonesia.</item>
        <item>Air France adalah maskapai nasional terbesar di Prancis. Sejak awal pendiriannya pada tahun 1933, maskapai ini telah berkembang sebagai maskapai terbesar dunia yang didukung oleh pengembangan ekonomi Prancis yang menghubungkan daerah jajahan di Afrika, Karibia &amp; Kepulauan Polinesia di Pasifik. Penggabungan dengan KLM Royal Dutch Airlines pada tahun 2004 membuat kehadirannya di Eropa dan dunia menjadi lebih komprehensif. Seperti kebanyakan perusahaan lain, meskipun terkena pukulan resesi ekonomi, memaksa manajemenuntuk melakukan evaluasi ulang usai menghadapi resesi yang melanda Air France. Perusahaan telah meluncurkan Program "Trasformasi 2015" yang nantinya bisa meningkatkan keuntungan yang penuh dan pemenuhan kebutuhan penumpang dalam penerbangan.</item>
        <item>All Nippon Airways Co., Ltd. (全日本空輸株式会社, Zen Nippon Kūyu Kabushiki-gaisha, atau juga dikenal sebagai Zennikkū (全日空) atau ANA adalah maskapai penerbangan Jepang yang berkantor pusat di Shiodome City Center, kawasan Shiodome, Minato, Tokyo. Ini juga berstatus sebagai maskapai penerbangan nasional Jepang. ANA melayani 49 destinasi domestik, 35 rute internasional[1] dan memiliki total pegawai 14.179 orang (data Mei 2009).[2] Hub internasional ANA di Bandar Udara Internasional Narita dan Bandar Udara Internasional Kansai, sementara hub domestik di Bandar Udara Internasional Tokyo, Bandar Udara Internasional Osaka, Bandar Udara Internasional Centrair Chubu (dekat Nagoya), dan Bandar Udara New Chitose (dekat Sapporo). </item>
        <item>Batik Air adalah maskapai purlayanan swasta Indonesia yang didirikan pada tahun 2013. Maskapai ini merupakan anak perusahaan Lion Air yang berlayanan penuh. Penerbangan perdana dilaksanakan pada hari Jumat, 3 Mei 2013 dari Jakarta ke Manado dan Balikpapan.</item>
        <item>Emirates (bahasa Arab: طَيَران الإمارات Ṭayarān Al-Imārāt) adalah sebuah maskapai penerbangan yang berpusat di Bandara Internasional Dubai, Dubai, Uni Emirat Arab. Maskapai ini mengalami perkembangan pesat sekitar tahun 2000-an di saat maskapai lain berjuang untuk bertahan dari kebangkrutan. Emirates sekarang melayani berbagai tujuan di Timur Tengah, Timur Jauh, India, Afrika, Eropa, dan Amerika Utara. Emirates juga merupakan maskapai penerbangan terbesar di Timur Tengah. \n\nEmirates mengoperasikan campuran armada pesawat berbadan lebar Airbus dan Boeing, dan merupakan salah satu dari sedikit maskapai yang mengoperasikan armada pesawat berbadan lebar (tidak termasuk Emirates Executive[5]). Per Desember 2021, Emirates adalah operator Airbus A380 terbesar dengan 121 pesawat yang beroperasi, dan dengan satu pesawat yang telah pensiun. Sejak diperkenalkan, Airbus A380 telah menjadi bagian integral dari armada Emirates, terutama pada rute jarak jauh dan padat. Emirates juga merupakan operator Boeing 777 terbesar di dunia dengan 155 pesawat beroperasi.</item>
        <item>Etihad Airways (bahasa Arab: شَرِكَة ٱلْاِتِّحَاد لِلطَّيْرَان, Sharikat al-Ittiḥād li-ṭ-Tayarān) merupakan maskapai penerbangan nasional Uni Emirat Arab (UEA). Abu Dhabi yang dikenal sebagai salah satu "permata dari Teluk Persia", mengalami kemajuan yang signifikan sejak ditemukannya minyak pada tahun 1958 dan kini dianggap sebagai salah satu negara terkaya di dunia dalam sumber daya alam dan membuat pemerintah UEA bersama investor swasta asing membentuk suatu kesatuan perusahaan transportasi udara yang bernama Etihad (Persatuan) yang berdiri pada bulan Juli 2003 dan kini Etihad dikenal sebagai salah satu maskapai paling berpengaruh dan memiliki penghargaan yang banyak setelah 10 tahun berdiri. \n\nEtihad Airways mengoperasikan lebih dari 1.000 penerbangan per minggu ke lebih dari 120 tujuan penumpang dan kargo di Timur Tengah, Afrika, Eropa, Asia, Australia, dan Amerika Utara, dengan armada 102[1] pesawat Airbus dan Boeing per Februari 2020. Pada tahun 2015, Etihad mengangkut 14,8 juta penumpang, meningkat 22,3% dari tahun sebelumnya, menghasilkan pendapatan sebesar US$9,02 miliar dan laba bersih sebesar US$103 juta. Basis utamanya adalah Bandara Internasional Abu Dhabi.</item> <item>British Airways (BA) adalah maskapai penerbangan nasional yang berasal dari Britania raya. Berkantor pusat di London, Inggris, didekat hub utamanya di London Heathrow. </item>
        <item>PT Garuda Indonesia (Persero), Tbk. atau dikenal sebagai Garuda Indonesia adalah maskapai penerbangan nasional Indonesia yang berkantor pusat di Bandar udara Internasional Soekarno–Hatta. Maskapai ini adalah suksesor dari KLM Interinsulair Bedrijf. Garuda Indonesia merupakan anggota SkyTeam satu-satunya di Indonesia dan maskapai terbesar kedua di Indonesia setelah Lion Air. Garuda Indonesia mengoperasikan penerbangan berjadwal ke sejumlah destinasi meliputi benua Asia, Eropa, dan Australia dari Jakarta, serta kota fokus, maupun kota lain untuk penerbangan Haji. Maskapai ini adalah satu-satunya maskapai dari Indonesia yang terbang ke wilayah Eropa dan Oseania. Maskapai ini juga pernah terbang ke wilayah Amerika hingga akhir 1990an. </item>
        <item>Korean Air (Korea: 주식회사 대한항공, Hanja: 株式會社 大韓航空, Alih aksara: Jusikhoesa Daehan Hanggong) adalah nama maskapai penerbangan nasional Korea Selatan. Masakapai ini bermarkas di Gonghang-dong, Gangseo-gu,di Seoul. Masakapai ini berdiri sejak 1962, menggantikan Korean National Airlines yang didirikan pada tahun 1948 Pasca Korea merdeka dari penjajahan Jepang.  </item>
        <item>PT. Lion Mentari Airlines beroperasi sebagai Lion Air adalah sebuah maskapai penerbangan bertarif rendah (low-cost carrier) yang berpangkalan pusat di Jakarta, Indonesia. Lion Air sendiri adalah maskapai swasta terbesar di Indonesia. Dengan jaringan rute di Indonesia, Filipina, Malaysia, Thailand, Australia, India, Arab Saudi, dan Jepang, serta rute charter menuju China, Hong Kong, Korea Selatan, dan Makau. Lion Air menjadikan dirinya sebagai pemain Regional yang akan berkompetisi dengan AirAsia dari Malaysia. Sepanjang tahun operasionalnya, Lion Air mengalami penambahan armada secara signifikan sejak tahun operasionalnya pada tahun 2000 dengan memegang sejumlah kontrak besar, salah satunya yaitu kontrak pengadaan pesawat dengan Airbus dan Boeing dengan total keseluruhan sebesar US$ 46.4 Milliar untuk armada 234 unit Airbus A320 dan 203 Pesawat Boeing 737 MAX. Perusahaan sendiri telah memiliki perencanaan jangka panjang pada maskapai untuk memberdayakan armadanya untuk mempercepat ekspansinya di kancah regional Asia Tenggara dengan membuat anak perusahaannya sendiri, yaitu Wings Air dan Batik Air sebagai pemerkuat operasional maskapai di Indonesia dan untuk di luar negeri, Lion Air memperkuat kehadirannya dengan mendirikan Malindo Air dan Thai Lion Air.</item>
        <item>Deutsche Lufthansa AG diucapkan [ˈdɔɪtʃə ˈlʊfthanza]) biasa disebut Lufthansa merupakan maskapai penerbangan terbesar di Eropa setelah Air-France-KLM, dan merupakan maskapai nasional jerman. Nama maskapai ini berasal dari kata "Luft" (kata Jerman berarti "udara"), dan "Hansa"(dari Liga Hansa, grup perdagangan abad pertengahan terkuat). Maskapai ini adalah maskapai terbesark kelima di dunia menurut jumlah yang diangkut, mengoperasikan rute penerbangan ke 209 kota di 81 negara. Kantor Pusat lufthansa terletak  </item>
        <item>Singapore Airlines (bahasa Tionghoa: 新加坡航空公司, Pinyin: Xīnjīapō Hángkōng Gōngsī) adalah maskapai penerbangan nasional Singapura. Kode IATA dari Singapore Airlines adalah SQ sedangkan Kode ICAO nya adalah SIA. Singapore Airlines adalah salah satu maskapai terbaik dan tersukses di Asia dengan penerbangan ke Eropa, Amerika Utara, serta Asia dan Australia. Penerbangan ke beberapa kota Asia Tenggara, Republik Rakyat Tiongkok, dan India ditangani oleh SilkAir sedangkan kargonya ditangani oleh Singapore Airlines Cargo. Namun semenjak SilkAir berhenti beroperasi pada tahun 2021, sebagian rute-rute SilkAir telah dioperasikan oleh Singapore Airlines. Mengikuti tren pesawat dengan tarif murah (low-cost carrier), Singapore Airlines membuka Tiger Airways yang juga bermarkas di Bandara Internasional Changi Singapura.</item>
        <item>Turkish Airlines (Turkish: Türk Hava Yolları) merupakan maskapai penerbangan nasional Turki yang berbasis di Istanbul. Per Agustus 2019, maskapai ini mengoperasikan layanan terjadwal ke 315 destinasi di Eropa, Asia, Afrika dan Amerika.[6] Dengan armada operasional 24 pesawat kargo, divisi kargo maskapai melayani 82 tujuan.</item>
        <item>Qantas Airlines Limited (pengucapan bahasa Inggris: [ˈkwɔntəs]) adalah maskapai penerbangan nasional Australia. Nama aslinya "QANTAS", sebuah singkatan bagi "Queensland and Northern Territory Aerial Services". Akrab disebut "The Flying Kangaroo", maskapai ini berpusat di Sydney, dengan pangkalan utama di Bandar Udara Internasional Kingsford Smith, dan merupakan maskapai terbesar Australia. Qantas adalah maskapai tertua ketiga di dunia dan maskapai tertua yang beroperasi menggunakan nama aslinya.</item>
        <item>Qatar Airways (Bahasa Arab: القطرية, al-Qaṭariya) adalah nama maskapai penerbangan nasional Qatar, yang memiliki basis utama di Bandar Udara Internasional Hamad. Saat ini, Qatar Airways melayani 150 tujuan internasional dan merupakan salah satu dari 5 maskapai pernerbangan yang mendapatkan status 5-star airlines dari Skytrax. Qatar Airways juga merupakan anggota Arab Air Carriers Organization. Sejak 2023, Qatar Airways dikendalikan oleh CEO Badr Mohammed Al Meer. Untuk 27 tahun pertama, Qatar Airways dijalurkan oleh Akbar Al Baker.</item>



    </string-array>
</resources>