<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".DetailAirlineActivity">


    

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <androidx.appcompat.widget.Toolbar-->
<!--                android:id="@+id/tb_main"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
            <ImageView
                android:id="@+id/action_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/back_arrow_color" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:padding="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_share_24"
                app:tint="@color/share_icon_color"
                android:contentDescription="@string/share"
                />

            <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="260dp"


        android:layout_height="200dp"
        android:layout_margin="75dp"
        android:contentDescription="@string/airline_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:scaleType="centerCrop"


        tools:src="@tools:sample/avatars"
        />

            <TextView
                android:id ="@+id/tv_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/airline_name"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="291dp" />




    </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:padding="16dp"

            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:padding="20dp"
            android:text="@string/description"



            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="319dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"

            android:text="@string/history"


            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:padding="20dp"
           />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:contentDescription="@string/airline_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
           />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_detail_meaningOfLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:padding="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aircraft"
            android:padding="16dp"

            android:textSize="25sp"
            android:textStyle="bold"/>
<TextView
         android:id="@+id/tv_detail_aircraftType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aircraft"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:padding="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:padding="16dp"

            android:textSize="25sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



<!--   <TableLayout-->
<!--       android:layout_width="match_parent"-->
<!--       android:layout_height="wrap_content">-->
<!--        <TableRow>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@color/light_blue"-->
<!--                android:padding="8dp"-->
<!--                android:text="@string/header_aircraft_name"-->
<!--                android:textStyle="bold" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/header_registration_number"-->
<!--                android:padding="8dp"-->
<!--                android:background="@color/light_blue"-->
<!--                android:textStyle="bold"/>-->


<!--        </TableRow>-->
<!--   </TableLayout>-->
</LinearLayout>

</ScrollView>